Enhance security features and logging; add token validation endpoint and update score retrieval methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.ddl.auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+# Loglama ayarlar?
+logging.level.root=INFO
+logging.level.com.example.tetris2048tournementbe.security=DEBUG
+logging.level.com.example.tetris2048tournementbe.service=DEBUG
+logging.level.org.springframework.security=INFO
