--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,13 @@ spring.application.name=Tetris2048TournementBE
 security.jwt.secret-key=${JWT_SECRET}
 security.jwt.expiration-time=3600000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://db:5432/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.ddl.auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
