--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Tetris2048TournementBE
 security.jwt.secret-key=${JWT_SECRET}
 security.jwt.expiration-time=3600000
 
-spring.datasource.url=jdbc:postgresql://db:5432/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
